@startuml timeline

skinparam packageStyle rectangle

' === MODELO ===
package "Modelo" {
    class Timeline {
        - years: Year[]
        + addYear()
        + getYears()
        + getData()
    }

    class Year {
        - value: string
        - description: string
        - events: Event[]
        + addEvent()
        + getEvents()
        + getData()
    }

    class Event {
        - title: string
        - date: string
        - city: string
        - country: string
        - participants: Participant[]
        + addParticipant()
        + getParticipant()
        + getData()
    }

    class Participant {
        - name: string
        - roles: string[]
        - img: string
        - events: Event[]
        - awards: Award[]
        + addEvent()
        + addAward()
        + getData()
    }

    class Award {
        - name: string
        - description: string
        + getData()
    }
}

' === DATA ===
package "dataTimelineMD" {
    package "awards" {}
    package "events" {}
    package "participants" {}
    package "years" {}
}

' === DATA Parser ===
package "dataParser" {
    class YearParser {
        + static parseFromMd(filePath): Year
    }
    class EventParser {
        + static parseFromMD(filePath): Event
    }
    class ParticipantParser {
        + static parseFromMD(filePath): Participant
    }
    class AwardParser {
        + static parseFromMD(filePath): Award
    }
}

' === LIBRERÍAS ===
package "node_modules" {
    class gray_matter <<Library>> {
        + matter(string|Buffer)
    }
}

' === CONTROLADORES ===
package "Controladores" {
    class App {
        + init(): Timeline
    }
}

' === SERVIDOR ===
package "Servidor" {
    class server_js << (F,#FFDDAA) >> {
        + GET /api/timeline
        + GET /api/search
        + GET /api/participant
        + express.static("public")
        + listen(port)
    }
}

' === SEARCH ===
package "Search" {
    abstract class BaseSearcher {
        - items: T[]
        + search(query): T[]
    }

    class YearSearcher {
        + search(query): Year[]
    }

    class EventSearcher {
        + search(query): Event[]
    }

    class ParticipantSearcher {
        + search(query): Participant[]
    }

    class AwardSearcher {
        + search(query): Award[]
    }

    class SearchService {
        - searchers: object
        + searchAll(query): object
    }

    SearchService o-- YearSearcher
    SearchService o-- EventSearcher
    SearchService o-- ParticipantSearcher
    SearchService o-- AwardSearcher

    BaseSearcher <|-- YearSearcher
    BaseSearcher <|-- EventSearcher
    BaseSearcher <|-- ParticipantSearcher
    BaseSearcher <|-- AwardSearcher
}

' === PUBLICO (Front-end) ===
package "Public" {
    class index_html << (F,#FFDBAA) >>
    class style_css  << (F,#E2EEFF) >>
    class main_js    << (F,#E2FFDB) >>
    class TimelineView_js << (F,#B0D6FF) >> {
        + render(timelineData)
    }
    class EventView_js << (F,#B0FFD6) >> {
        + render(eventsData)
    }
    class ParticipantView_js << (F,#FFF7AA) >> {
        + render(participantsData)
    }
    class AwardView_js << (F,#FFCFCF) >> {
        + render(awardsData)
    }
}

' === RELACIONES ENTRE CAPAS ===
Timeline *-- Year           : composition
Year *-- Event             : composition
Event *-- Participant      : composition
Participant *-- Award      : composition
Participant o-- Event      : aggregation

YearParser ..> Year        : crea instancia
EventParser ..> Event      : crea instancia
ParticipantParser ..> Participant : crea instancia
AwardParser ..> Award      : crea instancia

App --> Timeline           : crea/administra
App ..> YearParser         : envía filePath
App ..> EventParser        : envía filePath
App ..> ParticipantParser  : envía filePath
App ..> AwardParser        : envía filePath

server_js --> App          : usa init()
server_js --> Public       : sirve carpeta estática

index_html --> style_css   : "vincula"
index_html --> main_js     : "carga script"
main_js --> server_js      : "fetch datos"

main_js ..> TimelineView_js : "renderiza vista general"
main_js ..> EventView_js    : "renderiza eventos"
main_js ..> ParticipantView_js : "renderiza participantes"
main_js ..> AwardView_js    : "renderiza premios"

TimelineView_js --> index_html : "renderiza en"
EventView_js --> index_html    : "renderiza en"
ParticipantView_js --> index_html : "renderiza en"
AwardView_js --> index_html    : "renderiza en"

App ..> SearchService : usa

' Relación data <-> Parser
YearParser ..> dataTimelineMD : "lee y parsea desde .md"
EventParser ..> dataTimelineMD: "lee eventos"
ParticipantParser ..> dataTimelineMD: "lee participantes"
AwardParser ..> dataTimelineMD: "lee premios"

' Uso de gray-matter
YearParser ..> gray_matter : "usa matter()"
EventParser ..> gray_matter : "usa matter()"
ParticipantParser ..> gray_matter : "usa matter()"
AwardParser ..> gray_matter : "usa matter()"

@enduml



